--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
+_*
 .DS_Store
+dagstuhl-eas-manifesto.aux
+dagstuhl-eas-manifesto.log
+dagstuhl-eas-manifesto.out
+dagstuhl-eas-manifesto.pdf
+dagstuhl-eas-manifesto.synctex.gz
