--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ dagstuhl-eas-manifesto.log
 dagstuhl-eas-manifesto.out
 dagstuhl-eas-manifesto.pdf
 dagstuhl-eas-manifesto.synctex.gz
+dagstuhl-eas-manifesto.blg
