dumped in proposal text to be edited

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ dagstuhl-eas-manifesto.out
 dagstuhl-eas-manifesto.pdf
 dagstuhl-eas-manifesto.synctex.gz
 dagstuhl-eas-manifesto.blg
+raw-material/proposal.pdf
