--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ dagstuhl-eas-manifesto.pdf
 dagstuhl-eas-manifesto.synctex.gz
 dagstuhl-eas-manifesto.blg
 raw-material/proposal.pdf
+edit-macros.log
