updated TODOs in README

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,5 @@ dagstuhl-eas-manifesto.pdf
 dagstuhl-eas-manifesto.synctex.gz
 dagstuhl-eas-manifesto.blg
 raw-material/proposal.pdf
+edit-macros.log_*
 edit-macros.log
