Ignore generated files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ dagstuhl-eas-manifesto.blg
 raw-material/proposal.pdf
 edit-macros.log_*
 edit-macros.log
+dagstuhl-eas-manifesto.toc
+dagstuhl-eas-manifesto.bbl
