Tried to address most of the pending issues. (Dan, please check)

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ edit-macros.log_*
 edit-macros.log
 dagstuhl-eas-manifesto.toc
 dagstuhl-eas-manifesto.bbl
+dagstuhl-eas-manifesto.synctex.gz(busy)
